--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
+
+/* Style for circle on image */
 .circle-text {
-    width: 300px;
-    height: 300px;
-    background-color: rgba(255, 255, 255, 0.7);
+    width: 150px;
+    height: 150px;
+    background-color: rgba(43, 48, 53, 0.4);
     border-radius: 50%;
     position: absolute;
     bottom: 90px;
@@ -15,55 +17,51 @@
     align-items: center;
 }
 
-
-
-/* Style for the text inside the circular container */
 .circle-text p {
-    text-align: center;
+    color: #fff;
+	text-align: center;
     font-size: 20px;
-}
-
-@media (max-width: 767px) {
-    .carousel-inner .carousel-item>div {
-        display: none;
-    }
-
-    .carousel-inner .carousel-item>div:first-child {
-        display: block;
-    }
-}
-
-.carousel-inner .carousel-item.active,
-.carousel-inner .carousel-item-next,
-.carousel-inner .carousel-item-prev {
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-}
-
-/* medium and up screens */
-@media (min-width: 768px) {
-
-    .carousel-inner .carousel-item-end.active,
-    .carousel-inner .carousel-item-next {
-        transform: translateX(25%);
-    }
-
-    .carousel-inner .carousel-item-start.active,
-    .carousel-inner .carousel-item-prev {
-        transform: translateX(-25%);
-    }
-}
-
-.carousel-inner .carousel-item-end,
-.carousel-inner .carousel-item-start {
-    transform: translateX(0);
 }
 
 .font-weight-light {
     color: bisque;
 }
 
-.container {
+/* Background color of container */
+body {
     background-color: rgb(34, 41, 41);
 }
+
+@media (max-width: 767px) {
+		.carousel-inner .carousel-item > div {
+			display: none;
+		}
+		.carousel-inner .carousel-item > div:first-child {
+			display: block;
+		}
+	}
+
+	.carousel-inner .carousel-item.active,
+	.carousel-inner .carousel-item-next,
+	.carousel-inner .carousel-item-prev {
+		display: flex;
+	}
+
+	/* medium and up screens */
+	@media (min-width: 768px) {
+
+		.carousel-inner .carousel-item-end.active,
+		.carousel-inner .carousel-item-next {
+			transform: translateX(25%);
+		}
+
+		.carousel-inner .carousel-item-start.active, 
+		.carousel-inner .carousel-item-prev {
+			transform: translateX(-25%);
+		}
+	}
+
+	.carousel-inner .carousel-item-end,
+	.carousel-inner .carousel-item-start { 
+		transform: translateX(0);
+	}
