--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,13 @@
 
 /* Circular text container style */
 .circle-text {
-    width: 150px;
-    height: 150px;
-    background-color: rgba(43, 48, 53, 0.4);
+    width: 300px;
+    height: 300px;
+    background-color: rgba(43, 48, 53, 0.6);
     border-radius: 50%;
     position: absolute;
-    bottom: 50px; /* Adjust the bottom value as needed to position the circle */
+    bottom: 50px;
+    /* Adjust the bottom value as needed to position the circle */
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -18,11 +19,17 @@
     align-items: center;
 }
 
+/* Change the background color on hover */
+.circle-text:hover {
+    background-color: rgba(43, 48, 53, 0.8);
+}
+
 /* Text within the circular container */
 .circle-text p {
     color: #fff;
     text-align: center;
     font-size: 20px;
+    text-decoration: none;
 }
 
 /* Style for lighter text */
@@ -36,17 +43,22 @@ body {
 }
 
 .container {
-	background-color: #fff !important;
-	
+    background-color: #fff !important;
+
 }
 
 /* Media query for screens smaller than 767px */
 @media (max-width: 767px) {
-    .carousel-inner .carousel-item > div {
+    .carousel-inner .carousel-item>div {
         display: none;
     }
-    .carousel-inner .carousel-item > div:first-child {
+
+    .carousel-inner .carousel-item>div:first-child {
         display: block;
+    }
+
+    .project {
+        margin-bottom: 20px;
     }
 }
 
@@ -55,84 +67,94 @@ body {
 .carousel-inner .carousel-item-next,
 .carousel-inner .carousel-item-prev {
     display: flex;
-	background-color: transparent;
+    background-color: transparent;
 }
 
 .carouselContainer {
-	padding-left: 20px;
-	padding-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .carousel {
-	background-color: #2B3035;
-	border: solid white;
-	border-radius: 20px;
+    background-color: #2B3035;
+    border: solid white;
+    border-radius: 20px;
 }
 
 /* Media query for screens medium (768px) and larger */
 @media (min-width: 768px) {
+
     /* Styles for active, next, and prev carousel items on medium and larger screens */
     .carousel-inner .carousel-item-end.active,
     .carousel-inner .carousel-item-next {
         transform: translateX(25%);
     }
 
-    .carousel-inner .carousel-item-start.active, 
+    .carousel-inner .carousel-item-start.active,
     .carousel-inner .carousel-item-prev {
         transform: translateX(-25%);
     }
 }
 
+
 /* Reset transform for carousel items */
 .carousel-inner .carousel-item-end,
-.carousel-inner .carousel-item-start { 
+.carousel-inner .carousel-item-start {
     transform: translateX(0);
 }
 
 .carousel-item .card {
-	background-color: transparent;
-	border: none !important;
+    background-color: transparent;
+    border: none !important;
 }
 
 .projects-section {
-    padding: 40px 0; /* Add some spacing above and below the section */
+    padding: 40px 0;
+    /* Add some spacing above and below the section */
 }
 
 .projects-section h2 {
     text-align: center;
     font-size: 24px;
-    color: #333; /* Adjust the color as needed */
+    color: #333;
+    /* Adjust the color as needed */
     margin-bottom: 20px;
 }
 
 .project {
-    background-color: #f9f9f9; /* Background color for each project section */
-    border: 1px solid #ddd; /* Border for each project section */
+    background-color: #f9f9f9;
+    /* Background color for each project section */
+    border: 1px solid #ddd;
+    /* Border for each project section */
     padding: 20px;
-    margin-bottom: 20px; /* Spacing between project sections */
+    margin-bottom: 20px;
+    /* Spacing between project sections */
 }
 
 .project h3 {
     font-size: 20px;
-    color: #555; /* Adjust the color as needed */
+    color: #555;
+    /* Adjust the color as needed */
 }
 
 .project p {
     font-size: 16px;
-    color: #777; /* Adjust the color as needed */
+    color: #777;
+    /* Adjust the color as needed */
 }
 
 /* Add hover effect for project sections (optional) */
 .project:hover {
-    background-color: #e9e9e9; /* Change background color on hover */
+    background-color: #e9e9e9;
+    /* Change background color on hover */
     transition: background-color 0.3s ease-in-out;
 }
 
 /* Media query for screens smaller than 600px */
 @media only screen and (max-width: 600px) {
-	.columns {
-	  width: 100%;
-	}
+    .columns {
+        width: 100%;
+    }
 }
 
 #navbar {
@@ -155,54 +177,53 @@ body {
     padding: 16px;
 }
 
-/* The sticky class is added to the navbar with JS when it reaches its scroll position */
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement */
-.sticky + .content {
-    padding-top: 60px;
-}
-
-/* PRICING TABLE */
+/* PRICING TABLE ROW*/
 .pricingColumns {
-	padding: 8px;
+    padding: 8px;
+}
+
+/* PRICING TABLE Container*/
+.pricing-column {
+    border-radius: 10px;
+    /* Adjust the radius as needed */
+    overflow: hidden;
 }
 
 .pricing {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	-webkit-transition: 0.3s;
-	transition: 0.3s;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
 }
 
 .pricing .header {
-	background-color: #111;
-	color: white;
-	font-size: 25px;
+    background-color: #111;
+    color: white;
+    font-size: 25px;
 }
 
 .pricing .price {
-	color: #fff;
-	background-color: #2B3035;
-	font-size: 20px;
-	font-weight: bolder;
+    color: #fff;
+    background-color: #2B3035;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 .pricing:hover {
-  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.5)
+    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.5)
 }
 
 .pricing li {
-	border-bottom: 1px solid #2B3035;
-	padding: 20px;
-	text-align: center;
+    border-bottom: 1px solid #2B3035;
+    padding: 20px;
+    text-align: center;
 }
 
 .pricingContact {
-	background-color: #2B3035;
+    background-color: #2B3035;
+}
+
+.col {
+    padding-top: 15px;
 }
