--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -28,3 +28,18 @@
     margin-top: 5px; /* Add some margin to the top */
     color: #007bff; /* Set the text color */
 }
+
+#navbar {
+    overflow: hidden;
+    background-color: #333;
+}
+
+/* Navbar links */
+#navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+}
