--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,46 +115,93 @@ body {
     justify-content: space-evenly;
 }
 
-.projects-section {
-    padding: 40px 0;
-    /* Add some spacing above and below the section */
-}
-
-.projects-section h2 {
-    text-align: center;
-    font-size: 24px;
-    color: #333;
-    /* Adjust the color as needed */
-    margin-bottom: 20px;
-}
-
 .project {
-    background-color: #f9f9f9;
-    /* Background color for each project section */
-    border: 1px solid #ddd;
-    /* Border for each project section */
+    background-color: #f5f5f5;
     padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    position: relative;
+    overflow: hidden;
+}
+
+.project-number {
+    background-color: #333;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    border: 4px solid #000;
+}
+
+.project-content {
+    margin-left: 100px;
+    text-align: left;
+}
+
+.project-content h3 {
+    font-size: 32px;
+    margin-top: 0;
+    color: #333;
+}
+
+.project-content p {
+    font-size: 18px;
+    color: #666;
     margin-bottom: 20px;
-    /* Spacing between project sections */
 }
 
-.project h3 {
-    font-size: 20px;
-    color: #555;
-    /* Adjust the color as needed */
+.cta-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    font-size: 18px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
-.project p {
-    font-size: 16px;
-    color: #777;
-    /* Adjust the color as needed */
+.cta-button:hover {
+    background-color: #555;
 }
 
-/* Add hover effect for project sections (optional) */
-.project:hover {
-    background-color: #e9e9e9;
-    /* Change background color on hover */
-    transition: background-color 0.3s ease-in-out;
+/* Iframe Container Styles */
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9 aspect ratio for responsive iframe */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: none;
+    width: 50%;
+}
+
+.cta-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    font-size: 18px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+    background-color: #555;
 }
 
 /* Media query for screens smaller than 600px */
